# open-detection-control-plane

./: CLAUDE.md  README.md  pyproject.toml
docs/: architecture.md  mvp-roadmap.md
examples/chronicle_rules/: brute_force_login.yaral  deprecated_rule.yaral  dns_exfiltration.yaral  reference_list_check.yaral  suspicious_powershell.yaral
examples/ci/: github-actions-odcp.yml  pre-commit-hook.sh
examples/elastic_rules/: brute_force_login.json  disabled_rule.json  lateral_movement_psexec.json  powershell_suspicious.json
examples/sentinel_rules/: brute_force_signin.yaml  disabled_rule.yaml  lateral_movement_rdp.yaml  suspicious_powershell.yaml
examples/sigma_rules/: correlation_brute_force.yml  correlation_lateral_movement.yml  deprecated_rule.yml  filter_internal_scanners.yml  net_dns_exfiltration.yml  proc_creation_powershell_encoded.yml  proc_creation_psexec.yml  win_brute_force.yml
odcp/: __init__.py
odcp/adapters/: __init__.py
odcp/agent/: __init__.py  executor.py  orchestrator.py  rule_generator.py  session.py  tools.py
odcp/analyzers/: __init__.py  ci.py  dac.py  ocsf_mapper.py  splunk_cloud.py
odcp/cli/: __init__.py  main.py
odcp/collector/: __init__.py  agent.py  push_client.py  registry.py
odcp/collectors/: __init__.py  api.py  local.py
odcp/compliance/: __init__.py  report_builder.py
odcp/core/: __init__.py  engine.py  graph.py
odcp/intel/: __init__.py  manager.py
odcp/lifecycle/: __init__.py  manager.py
odcp/models/: __init__.py  ai_soc.py  auth.py  collector.py  correlation.py  coverage.py  cross_platform.py  dependency.py  detection.py  environment.py  finding.py  intel.py  lifecycle.py  ocsf.py  report.py  runtime.py  scoring.py  source_catalog.py
odcp/server/: __init__.py  (+10 more)
schemas/: scan_report.schema.json
(+112 files in other folders)
