[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odcp"
version = "0.1.0"
description = "Open Detection Control Plane — a vendor-neutral detection readiness platform"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "ODCP Contributors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "typer>=0.9,<1.0",
    "networkx>=3.0,<4.0",
    "rich>=13.0,<14.0",
    "jinja2>=3.1,<4.0",
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
agent = [
    "anthropic>=0.40,<2.0",
]
server = [
    "fastapi>=0.100,<1.0",
    "uvicorn[standard]>=0.20,<0.35",
    "python-multipart>=0.0.6",
]
all = [
    "anthropic>=0.40,<2.0",
    "fastapi>=0.100,<1.0",
    "uvicorn[standard]>=0.20,<0.35",
    "python-multipart>=0.0.6",
]

[project.scripts]
odcp = "odcp.cli.main:app"

[tool.setuptools.packages.find]
include = ["odcp*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
